--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ python/.vscode/*
 __pycache__/
 *.so
 *~
+# Data should be stored in azure database [not currently working] 
+# previously store data from this folder is avaiable here: 
+# https://drive.google.com/drive/folders/12TQPUoxI76KMGwthTMI6tNrBIIArnSIp?usp=sharing
+data/*
 
 # python ignore exceptions
 !python/data/keywords.csv
